# kaggle---Recod.ai-LUC---Scientific-Image-Forgery-Detection

./: .gitignore  CONTRIBUTING.md  LICENSE  Makefile  README.md  SETUP.md  pyproject.toml
.devcontainer/: devcontainer.json
data/: README.md
models/: README.md
notebooks/: 01_data_exploration.ipynb
scripts/: train.py
src/: __init__.py
src/forgery_detection/: __init__.py  config.py  data.py  model.py  train.py
tests/: test_models.py
