[project]
name = "forgery-detection"
version = "0.1.0"
description = "Scientific Image Forgery Detection for Recod.ai/LUC Kaggle Competition"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "Giovanni MDS"}
]

dependencies = [
    "numpy",
    "pandas",
    "scikit-learn",
    "torch",
    "torchvision",
    "pillow",
    "matplotlib",
    "seaborn",
    "jupyter",
    "notebook",
    "ipykernel",
    "tqdm",
    "opencv-python",
    "albumentations",
    "timm",
    "tensorboard",
    "kaggle>=1.7.4.5",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "black>=23.7.0",
    "flake8>=6.1.0",
    "ruff>=0.0.280",
    "mypy>=1.5.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.black]
line-length = 100
target-version = ['py311']
include = '\.pyi?$'

[tool.ruff]
line-length = 100
target-version = "py311"
select = ["E", "F", "I"]
ignore = []

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --cov=src --cov-report=term-missing"

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
